modules/02-traffic-management/shift-traffic-v2-weight/catalogdetail-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogdetail
  namespace: workshop
spec:
  hosts:
  - catalogdetail
  http:
  - route:
    - destination:
        host: catalogdetail
        port:
          number: 3000
        subset: v1
      weight: 90
    - destination:
        host: catalogdetail
        port:
          number: 3000
        subset: v2
      weight: 10
